--- a/pages/explore.css
+++ b/pages/explore.css
@@ -100,6 +100,91 @@ html, body {
     text-shadow: 1px 1px 1px #000;
   }
 
+  /* ----------Below Header---------- */
+  .title_text {
+    margin: 3rem 0.4rem 3rem 0.4rem;
+    text-align: center;
+  }
+
+  h2 {
+    color: #1A1A1A;
+    font-weight: initial;
+  }
+
+  /* ----------Articles---------- */
+  .section_one, .section_two {
+    margin: 0 1rem 0 1rem;
+    background-color: #F1F2F6;
+  }
+
+  .section_one img {
+    width: 100%;
+    height: auto;
+  }
+
+  .photo_source_mobile {
+    opacity: 70%;
+    font-size: x-small;
+    margin: -0.15rem 0 0 0.5rem;
+  }
+
+  .photo_source_desktop_one, .photo_source_desktop_two {
+    visibility: collapse;
+  }
+
+  .section_two img {
+    width: 100%;
+    height: auto;
+  }
+
+  .article_text {
+    margin: 1.5rem 0.4rem 1.5rem 0.4rem;
+    font-size: 16px;
+  }
+
+  .section_one h2, .section_two h2 {
+    margin: 1.5rem 0 0 0.4rem;
+  }
+
+  /* ----------Bottom---------- */
+  .bottom {
+    margin-top: 10rem;
+    padding: 3rem 0rem 3rem 0rem;
+    background-color: #8B9096;
+  }
+
+  .bottom h4 {
+    color: #1A1A1A;
+    text-align: left;
+  }
+
+  .address, .hours {
+    margin: 3rem 0rem 3rem 3rem;
+    font-size: smaller;
+    opacity: 90%;
+  }
+
+  .hours p {
+    margin: 0;
+    padding-bottom: 7px;
+  }
+
+  .address p {
+    margin: 0;
+    padding-bottom: 3px;
+  }
+
+  /* ----------Footer---------- */
+  footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
+  }
+  
+  footer p {
+    opacity: 70%;
+  }
 
 }
 
@@ -184,6 +269,97 @@ html, body {
     text-shadow: 1px 1px 1px #000;
   }
   
+   /* ----------Below Header---------- */
+   .title_text {
+    margin: 3rem 2rem 3rem 2rem;
+    text-align: center;
+  }
+
+  h2 {
+    color: #1A1A1A;
+    font-weight: initial;
+  }
+
+  /* ----------Articles---------- */
+  .section_one, .section_two {
+    margin: 0 1rem 0 1rem;
+    background-color: #F1F2F6;
+  }
+
+  .section_one img {
+    width: 100%;
+    height: auto;
+  }
+
+  .photo_source_mobile {
+    opacity: 70%;
+    font-size: x-small;
+    margin: -0.15rem 0 0 1rem;
+  }
+
+  .photo_source_desktop_one, .photo_source_desktop_two {
+    visibility: collapse;
+  }
+
+  .section_two img {
+    width: 100%;
+    height: auto;
+  }
+
+  .article_text {
+    margin: 1.5rem 1rem 1.5rem 1rem;
+    font-size: 16px;
+  }
+
+  .section_one h2, .section_two h2 {
+    margin: 1.5rem 0 0 1rem;
+  }
+
+  /* ----------Bottom---------- */
+  .bottom {
+    margin-top: 10rem;
+    padding: 3rem 0 3rem 0;
+    background-color: #8B9096;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .bottom h4 {
+    color: #1A1A1A;
+    text-align: left;
+  }
+
+  .address, .hours {
+    padding: 0rem 0rem 3rem 3rem;
+    font-size: smaller;
+    opacity: 90%;
+    width: 250px;
+    height: 230px;
+    float: left;
+  }
+
+  .hours p {
+    margin: 0;
+    padding-bottom: 7px;
+  }
+
+  .address p {
+    margin: 0;
+    padding-bottom: 3px;
+  }
+
+  /* ----------Footer---------- */
+  footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
+  }
+  
+  footer p {
+    opacity: 70%;
+  }
   
 }
 
@@ -272,6 +448,105 @@ html, body {
     text-shadow: 1px 1px 1px #000;
   }
 
+   /* ----------Below Header---------- */
+   .title_text {
+    margin: 3rem 20vw 3rem 20vw;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  h2 {
+    color: #1A1A1A;
+    font-weight: initial;
+    font-size: 1.5rem;
+  }
+
+   /* ----------Articles---------- */
+   .section_one, .section_two {
+    margin: 0 2rem 0 2rem;
+    background-color: #F1F2F6;
+  }
+
+  .section_one img {
+    width: 100%;
+    height: auto;
+  }
+
+  .photo_source_mobile {
+    opacity: 70%;
+    font-size: x-small;
+    margin: -0.15rem 0 0 1rem;
+  }
+
+  .photo_source_desktop_one, .photo_source_desktop_two {
+    visibility: collapse;
+  }
+
+  .section_two img {
+    width: 100%;
+    height: auto;
+  }
+
+  .article_text {
+    margin: 1.5rem 1rem 1.5rem 1rem;
+    font-size: 16px;
+  }
+
+  .section_one h2, .section_two h2 {
+    margin: 1.5rem 0 0 1rem;
+    font-size: xx-large;
+  }
+
+  /* ----------Bottom---------- */
+  .bottom {
+    margin-top: 10rem;
+    padding: 3rem 0 3rem 0;
+    background-color: #8B9096;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .bottom h4 {
+    color: #1A1A1A;
+    text-align: left;
+  }
+
+  .hours, .address {
+    font-size: smaller;
+    opacity: 90%;
+    width: 250px;
+    height: 230px;
+    float: left;
+  }
+
+  .address {
+    padding-left: 5vw;
+  }
+
+  .hours p {
+    margin: 0;
+    padding-bottom: 7px;
+  }
+
+  .address p {
+  margin: 0;
+  padding-bottom: 3px;
+  }
+
+  /* ----------Footer---------- */
+  footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
+  }
+  
+  footer p {
+    opacity: 70%;
+  }
   
 }
 
@@ -364,6 +639,132 @@ html, body {
     text-shadow: 1px 1px 1px #000;
   }
 
+  /* ----------Below Header---------- */
+  .title_text {
+    margin: 4rem 20vw 2rem 20vw;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.8rem;
+    color: #1A1A1A;
+    font-weight: initial;
+  }
+  
+  /* ----------Articles---------- */
+  .section_one {
+    margin: 2rem 2rem 0 2rem;
+    background-color: #F1F2F6;
+    display: inline-block;
+    align-items: flex-start;
+  }
+
+  .section_one img {
+    width: 100%;
+    height: auto;
+    float: left;
+    width: 50%;
+  }
+
+  .h2_one_push_right {
+    margin-left: 50.5vw;
+    margin-top: -1rem;
+    font-size: xx-large;
+  }
+
+  .h2_two_push_right {
+    padding-left: 2.5rem;
+    margin-top: -2rem;
+    font-size: xx-large;
+  }
+
+
+  .article_text {
+    margin: 0 0 1rem 0;
+    padding-left: 2.5rem;
+    float: left;
+    width: 40%;
+    font-size: 16px;
+  }
+
+  .photo_source_desktop_one {
+    opacity: 70%;
+    font-size: x-small;
+    margin-left: 2rem;
+  }
+
+  .photo_source_mobile {
+    visibility: collapse;
+  }
+
+  .section_two {
+    margin: 2rem 2rem 0 2rem;
+    background-color: #F1F2F6;
+    display: inline-block;
+    align-items: flex-start;
+  }
+
+  .section_two img {
+    width: 100%;
+    height: auto;
+    float: right;
+    width: 50%;
+  }
+
+  .photo_source_desktop_two {
+    opacity: 70%;
+    font-size: x-small;
+    margin-right: 2rem;
+    text-align: end;
+  }
+
+  /* ----------Bottom---------- */
+  .bottom {
+    margin-top: 10rem;
+    padding: 3rem 0 3rem 0;
+    background-color: #8B9096;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .bottom h4 {
+    color: #1A1A1A;
+    text-align: left;
+  }
+
+  .hours, .address {
+    font-size: smaller;
+    opacity: 90%;
+    width: 250px;
+    height: 230px;
+    float: left;
+  }
+
+  .address {
+    padding-left: 10vw;
+  }
+
+  .hours p {
+    margin: 0;
+    padding-bottom: 7px;
+  }
+
+  .address p {
+  margin: 0;
+  padding-bottom: 3px;
+  }
+  /* ----------Footer---------- */
+  footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
+  }
+
+  footer p {
+    opacity: 70%;
+  }
   
 }
 
@@ -455,6 +856,131 @@ h1 {
   font-size: 7rem;
   color: #f5f5f5;
   text-shadow: 1px 1px 1px #000;
+}
+
+/* ----------Below Header---------- */
+.title_text {
+  margin: 4rem 0 2rem 0vw;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #1A1A1A;
+  font-weight: initial;
+  font-size: 1.8rem;
+}
+
+/* ----------Articles---------- */
+.section_one {
+margin: 2rem 5rem 0 5rem;
+background-color: #F1F2F6;
+display: inline-block;
+align-items: flex-start;
+}
+
+.section_one img {
+width: 100%;
+height: auto;
+float: left;
+width: 50%;
+}
+
+.article_text {
+margin: 0 0 1rem 0;
+padding-left: 2.5rem;
+float: left;
+width: 40%;
+font-size: 16px;
+}
+
+.h2_one_push_right {
+  margin-left: 47.3vw;
+  font-size: xx-large;
+}
+
+.h2_two_push_right {
+  padding-left: 2.5rem;
+  font-size: xx-large;
+}
+
+.photo_source_desktop_one {
+opacity: 70%;
+font-size: x-small;
+margin-left: 5rem;
+}
+
+.photo_source_mobile {
+visibility: collapse;
+}
+
+.section_two {
+margin: 2rem 5rem 0 5rem;
+background-color: #F1F2F6;
+display: inline-block;
+align-items: flex-start;
+}
+
+.section_two img {
+width: 100%;
+height: auto;
+float: right;
+width: 50%;
+}
+
+.photo_source_desktop_two {
+opacity: 70%;
+font-size: x-small;
+margin-right: 5rem;
+text-align: end;
+}
+
+/* ----------Bottom---------- */
+.bottom {
+margin-top: 10rem;
+padding: 3rem 0 3rem 0;
+background-color: #8B9096;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.bottom h4 {
+color: #1A1A1A;
+text-align: left;
+}
+
+.hours, .address {
+font-size: smaller;
+opacity: 90%;
+width: 250px;
+height: 230px;
+float: left;
+}
+
+.address {
+padding-left: 10vw;
+}
+
+.hours p {
+margin: 0;
+padding-bottom: 7px;
+}
+
+.address p {
+margin: 0;
+padding-bottom: 3px;
+}
+
+/* ----------Footer---------- */
+footer {
+background-color: #8B9096;
+font-size: x-small;
+font-weight: lighter;
+text-align: center;
+}
+
+footer p {
+opacity: 70%;
 }
 
 
